# embedding-mcp

./: .gitignore  README.md
.github/instructions/: python.instructions.md
mcp-server/: pyproject.toml
mcp-server/app/: auth.py  config.py  db.py  main.py  mcp.py
